--- a/photopicklib/src/main/res/values/strings.xml
+++ b/photopicklib/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="picker_title">图片选择</string>
     <string name="picker_delete">删除</string>
     <string name="picker_done">完成</string>
-    <string name="picker_done_with_count">完成(%1$d/%2$d)</string>
+    <string name="picker_done_with_count">选择图片(%1$d/%2$d)</string>
     <string name="picker_image_index">%1$d/%2$d</string>
     <string name="picker_undo">取消</string>
     <string name="picker_deleted_a_photo">删除一张图片</string>
