添加是否压缩设置，压缩后图片放到缓存路径，减少OOM情况出现

--- a/photopicklib/src/main/res/values/strings.xml
+++ b/photopicklib/src/main/res/values/strings.xml
@@ -3,10 +3,13 @@
     <string name="picker_title">图片选择</string>
     <string name="picker_delete">删除</string>
     <string name="picker_done">完成</string>
+    <string name="picker_please_sel_photo">请选择图片</string>
     <string name="picker_done_with_count">选择图片(%1$d/%2$d)</string>
     <string name="picker_image_index">%1$d/%2$d</string>
     <string name="picker_undo">取消</string>
     <string name="picker_all_image">所有图片</string>
     <string name="picker_over_max_count_tips">最多选择%1$d张图片</string>
     <string name="picker_image_count">%1$d</string>
+
+    <string name="get_file_size">获取文件大小获取失败</string>
 </resources>
